<resources>
    <string name="app_name">Location Logger</string>
    <string name="tracking_status">Tracking Stopped</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="latest_locations">Latest Location: none</string>
    <string name="saved_locations">Saved Locations: </string>
    <string name="saved_entries">No saved entries yet.</string>
</resources>