<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusText"
        android:text="@string/tracking_status"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/locationText"
        android:text="@string/latest_locations"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startButton"
        android:text="@string/start_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stopButton"
        android:text="@string/stop_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/savedLocationText"
        android:text="@string/saved_locations"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/loggedText"
            android:text="@string/saved_entries"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ScrollView>

</LinearLayout>